dagster/overlays/test/test_registry.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  namespace: docker-registry
spec:
  containers:
  - name: example-project
    image: 10.43.231.26/example-project:332
  imagePullSecrets:
  - name: docker-registry-secret-2
